Retorno de URLs en README.md

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Find and validate URLs in .md archives",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "eslint": "eslint",
+    "eslintInit": "eslint --init"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,10 @@
   "homepage": "https://github.com/florenciasilva/cdmx-2018-01-FE-markdown#readme",
   "dependencies": {
     "jest": "^23.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
